# lottery

./: .gitignore  AGENT.md  CHANGELOG.md  CHANGELOG_DLT_SUPPORT.md  CHANGELOG_v1.1.md  GEMINI.md  README.md  README_TOP_SCORED_GENERATION.md  TODO.md  analyze_recent_draws.py  demo_anti_popular.py  demo_top_scored_features.py  diagnose_analysis.py  evaluate_number.py  evaluation_correction.md  example_improved_usage.py  generate_ssq.py  generate_strict_custom_ssq.py  generate_strict_ssq_v2.py  number_evaluation_report.md  pyproject.toml  rank_generated_numbers.py  requirements.txt  run.py  test_anti_popular.py  test_backup_apis.py  test_detail_analysis.py  test_dlt_support.py  test_evaluation_gui.py  test_evaluation_ui.py  test_gui_display.py  test_gui_generators.py  test_gui_strategies.py  test_improved_blue_algorithm.py  test_number_generation_validation.py  test_search_params_visibility.py  test_tk.py  test_top_scored_generation.py
.pytest_cache/: .gitignore
config/: app_config.json  settings.json
data/: dlt_history.json  ssq_history.json  ssq_history.json.bak2  ssq_history.json.bak3  ssq_history.json.bak4  ssq_history.json.bak5
docs/: DARK_MODE_FIX.md  DARK_MODE_FIX_COMPLETE.md  DETAIL_ANALYSIS_VERIFICATION.md  DLT_SUPPORT_UPDATE.md  EVALUATION_FEATURE_README.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  GUI_DISPLAY_FIX.md  GUI_FINAL_FIX.md  GUI_usage_guide.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NUMBER_EVALUATION_GUI_PLAN.md  NUMBER_EVALUATION_USER_GUIDE.md  P0-1_analyzer_architecture_fix.md  P0-2_calculator_architecture_fix.md  QUICK_REFERENCE.md  (+32 more)
(+250 files in other folders)
